--- a/app/src/main/res/layout/ac_call_number.xml
+++ b/app/src/main/res/layout/ac_call_number.xml
@@ -23,6 +23,7 @@
         >
 
         <LinearLayout
+            android:id="@+id/service_center_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/y20"
